<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundmateriallight"
    tools:context="com.example.android.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--Player 1 Starts here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_team1"
                tools:targetApi="jelly_bean"
                style="@style/Team1" />

            <TextView
                android:id="@+id/team_1_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textTeam1Score"
                tools:targetApi="jelly_bean"
                style="@style/Team1score" />


            <!--Player 1 Scoring buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:onClick="addThreeForTeam1"
                    android:text="@string/addThreeForTeam1"
                    style="@style/Team1addThree" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:onClick="addTwoForTeam1"
                    android:text="@string/addTwoPointTeam1"
                    style="@style/Team1addTwo" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:onClick="addOneForTeam1"
                    android:text="@string/addFreeThrowTeam1"
                    style="@style/Team1addFree" />
            </LinearLayout>

        </LinearLayout>
        <!--Center gray line-->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <!--Player 2 starts here-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity"
            tools:ignore="HardcodedText">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_team2"
                tools:ignore="UnusedAttribute"
                style="@style/Team2" />

            <TextView
                android:id="@+id/team_2_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textTeam2Score"
                tools:ignore="InconsistentLayout,UnusedAttribute"
                style="@style/Team2Score" />

            <!--Scoring buttons Player 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:onClick="addThreeForTeam2"
                    android:text="@string/addThreePointTeam2"
                    style="@style/Team2addThree" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:onClick="addTwoForTeam2"
                    android:text="@string/addTwoPointTeam2"
                    style="@style/Team2addTwo" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:onClick="addOneForTeam2"
                    android:text="@string/addFreeThrowTeam2"
                    style="@style/Team2Free" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:onClick="resetScore"
        android:text="@string/btn_reset"
        style="@style/Reset" />
</RelativeLayout>